[Feat]: 整体模块改造